bug: add exception to localhost cors